# restful

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: github-actions.yaml
src/: .dockerignore  Dockerfile  pyproject.toml  setup.cfg
src/alembic/: env.py
src/alembic/versions/: 7e1998928d81_init.py
src/app/: db.py  main.py  models.py  t.py
src/tests/: conftest.py  test_main.py
