[tool.poetry]
name = "restful"
version = "0.1.0"
description = ""
authors = ["ShaJaPas <shajapas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}
flake8 = {version = "^6.0.0", allow-prereleases = true}
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
