[tool.poetry]
name = "restful"
version = "0.1.0"
description = ""
authors = ["ShaJaPas <shajapas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}
flake8 = {version = "^6.0.0", allow-prereleases = true}
httpx = "^0.23.1"
mypy = "^0.991"
pytest-alembic = "^0.9.1"
pytest-asyncio = "^0.20.3"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
pep8-naming = "^0.13.3"
flake8-isort = "^5.0.3"
flake8-pytest-style = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
